force-app/main/default/objects/Strategic__GEMP_Contact__c/Strategic__GEMP_Contact__c.object-meta.xml
<CustomObject>
    <label>GEMP Contact</label>
    <nameField>
        <label>GEMP Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMP Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>