force-app/main/default/objects/Strategic__GEMP_Contact__c/fields/Strategic__Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>