force-app/main/default/objects/Strategic__GEMP_Contact__c/fields/Strategic__Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Contact Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>