force-app/main/default/objects/Strategic__GEMP_Contact__c/fields/Strategic__Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>