force-app/main/default/objects/Strategic__GEMP_Contact__c/fields/Strategic__First_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategic__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>