force-app/main/default/objects/Strategic__GEMP_Contact__c/fields/Strategic__GEM_Portal_Grant__c.field-meta.xml
<CustomField>
    <fullName>Strategic__GEM_Portal_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GEM Portal Grant</label>
    <referenceTo>Strategic__GEMPortal_Grants__c</referenceTo>
    <relationshipLabel>GEMP Contacts</relationshipLabel>
    <relationshipName>GEMP_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>