force-app/main/default/objects/Strategic__GEMP_Contact__c/listViews/Strategic__All.listView-meta.xml
<ListView>
    <fullName>Strategic__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>